# termux-tools

./: configure.ac  termux.properties
doc/: termux.1.md.in
mirrors/: Makefile.am  default
mirrors/asia/: icst.buildtools.github.io  icst.default.github.io  icst.github.io  mirror.icst.buildtool
mirrors/north_america/: mirror.icst.blockidle.buildtools
motds/: Makefile.am  motd.sh.in
scripts/: pkg.in  termux-change-repo.in  termux-reset.in
